# pico_sdk_boilerplate

./: CMakeLists.txt  README.md  clean.sh  cmake_configure.sh  make.sh
src/: CMakeLists.txt  blink.cpp
